--- a/Portfoliosite/present.html
+++ b/Portfoliosite/present.html
@@ -55,12 +55,12 @@
     <div id="art_storage"><!--#art_storage-->
       <div class="container">
           <ul class="row first">
-            <li class="thumbnail">
-                <img class="" width="136.5px" height="180px" alt="Self Portrait with Striped Sweater"  src="images/selfport_striped_shirt.jpg">
+            <li class="">
+                <img class="thumbnail" width="136.5px" height="180px" alt="Self Portrait with Striped Sweater"  src="images/selfport_striped_shirt.jpg">
                 <br><span class="caption">Self Portrait with Striped Sweater</span>
             </li>
-            <li class="thumbnail">
-                <img class="" width="112.5px" height="180px" alt="Self Portrait with Coffee Cup"  src="images/Self_Portrait_With_Coffee_Cup.jpg">
+            <li class="">
+                <img class="thumbnail" width="112.5px" height="180px" alt="Self Portrait with Coffee Cup"  src="images/Self_Portrait_With_Coffee_Cup.jpg">
                 <br><span class="caption">Self Portrait with Coffee Cup</span>
             </li>
             <li>
@@ -72,112 +72,112 @@
                 <br><span class="caption">Self Portrait with Green Shirt</span>
             </li>
             <li>
-                <img class="" width="240px" height="180px" alt="Encaustic Self Portrait #1"  src="images/encaustic_portrait.jpg">
-                <br><span class="">Encaustic Self Portrait #1</span>
+                <img class="thumbnail" width="240px" height="180px" alt="Encaustic Self Portrait #1"  src="images/encaustic_portrait.jpg">
+                <br><span class="caption">Encaustic Self Portrait #1</span>
             </li>
             <li>
-                <img class="" width="235.5px" height="180px" alt="Line For Icecream"  src="images/Line_For_Icecream.jpg">
-                 <br><span class="">Line For Icecream</span>
+                <img class="thumbnail" width="235.5px" height="180px" alt="Line For Icecream"  src="images/Line_For_Icecream.jpg">
+                 <br><span class="caption">Line For Icecream</span>
             </li>
             <li>
-                <img class="" width="231px" height="180px" alt="Line For Food #1"  src="images/Line_For_Food-1.jpg">
-                 <br><span class="">Line For Food #1</span>
+                <img class="thumbnail" width="231px" height="180px" alt="Line For Food #1"  src="images/Line_For_Food-1.jpg">
+                 <br><span class="caption">Line For Food #1</span>
             </li>
             <li>
-                <img class="" width="211.5px" height="180px" alt="Valentine"  src="images/Valentine.jpg">
-                 <br><span class="">Valentine</span>
+                <img class="thumbnail" width="211.5px" height="180px" alt="Valentine"  src="images/Valentine.jpg">
+                 <br><span class="caption">Valentine</span>
             </li>
             <li>
-                <img class="" width="144px" height="180px" alt="Hannah Commision 1"  src="images/hannah_commision_1.jpg">
-                 <br><span class="">Hannah Commision 1</span>
+                <img class="thumbnail" width="144px" height="180px" alt="Hannah Commision 1"  src="images/hannah_commision_1.jpg">
+                 <br><span class="caption">Hannah Commision 1</span>
             </li>
             <li>
-                <img class="" width="141px" height="180px" alt="Hannah Commision 2"  src="images/hannah_commision_2.jpg">
-                 <br><span class="">Hannah Commision 2</span>
+                <img class="thumbnail" width="141px" height="180px" alt="Hannah Commision 2"  src="images/hannah_commision_2.jpg">
+                 <br><span class="caption">Hannah Commision 2</span>
             </li>
             <li>
-                <img class="" width="136.5px" height="180px" alt="Hannah Commision 3"  src="images/hannah_commision_3.jpg">
-                 <br><span class="">Hannah Commision 3</span>
+                <img class="thumbnail" width="136.5px" height="180px" alt="Hannah Commision 3"  src="images/hannah_commision_3.jpg">
+                 <br><span class="caption">Hannah Commision 3</span>
             </li>
             <li>
-                <img class="" width="174px" height="180px" alt="Octearaffe-inside"  src="images/octearaffe-inside.jpg">
-                <br><span class="">Octearaffe-inside</span>
+                <img class="thumbnail" width="174px" height="180px" alt="Octearaffe-inside"  src="images/octearaffe-inside.jpg">
+                <br><span class="caption">Octearaffe-inside</span>
             </li>
             <li>
-                <img class="" width="181.5px" height="180px" alt="Wolearab-inside"  src="images/Wolearab-inside.jpg">
-                 <br><span class="">Wolearab-inside</span>
+                <img class="thumbnail" width="181.5px" height="180px" alt="Wolearab-inside"  src="images/Wolearab-inside.jpg">
+                 <br><span class="caption">Wolearab-inside</span>
             </li>
             <li>
-                <img class="" width="153px" height="180px" alt="David Folsom-Choctaw Hymns"  src="images/David_Folsom-Choctaw_Hymns.jpg">
-                 <br><span class="">David Folsom-Choctaw Hymns</span>
+                <img class="thumbnail" width="153px" height="180px" alt="David Folsom-Choctaw Hymns"  src="images/David_Folsom-Choctaw_Hymns.jpg">
+                 <br><span class="caption">David Folsom-Choctaw Hymns</span>
             </li>
             <li>
-                <img class="" width="156px" height="180px" alt="Peter Pitchlynn-Choctaw Hymns"  src="images/Peter_Pitchlynn-Choctaw_Hymns.jpg">
-                 <br><span class="">Peter Pitchlynn-Choctaw Hymns</span>
+                <img class="thumbnail" width="156px" height="180px" alt="Peter Pitchlynn-Choctaw Hymns"  src="images/Peter_Pitchlynn-Choctaw_Hymns.jpg">
+                 <br><span class="caption">Peter Pitchlynn-Choctaw Hymns</span>
             </li>
             <li>
-                <img class="" width="156px" height="180px" alt="Cyrus Byington-Choctaw Hymns"  src="images/Cyrus_Byington-Choctaw_Hymns.jpg">
-                 <br><span class="">Cyrus Byington-Choctaw Hymns</span>
+                <img class="thumbnail" width="156px" height="180px" alt="Cyrus Byington-Choctaw Hymns"  src="images/Cyrus_Byington-Choctaw_Hymns.jpg">
+                 <br><span class="caption">Cyrus Byington-Choctaw Hymns</span>
             </li>
             <li>
-                <img class="" width="141px" height="180px" alt="Rev Folsom-Choctaw Hymns"  src="images/Rev_Folsom-Choctaw_Hymns.jpg">
-                 <br><span class="">Rev Folsom-Choctaw Hymns</span>
+                <img class="thumbnail" width="141px" height="180px" alt="Rev Folsom-Choctaw Hymns"  src="images/Rev_Folsom-Choctaw_Hymns.jpg">
+                 <br><span class="caption">Rev Folsom-Choctaw Hymns</span>
             </li>
             <li>
-                <img class="" width="144px" height="180px" alt="Alfred Wright-Choctaw Hymns"  src="images/Al_Wright-Choctaw_Hymns.jpg">
-                <br><span class="">Alfred Wright-Choctaw Hymns</span>
+                <img class=thumbnail"" width="144px" height="180px" alt="Alfred Wright-Choctaw Hymns"  src="images/Al_Wright-Choctaw_Hymns.jpg">
+                <br><span class="caption">Alfred Wright-Choctaw Hymns</span>
             </li>
             <li>
-                <img class="" width="136.5px" height="180px" alt="First Day-Bertram Bobb Documentry"  src="images/First_Day-Bertram_Bobb_Documentry.jpg">
+                <img class="thumbnail" width="136.5px" height="180px" alt="First Day-Bertram Bobb Documentry"  src="images/First_Day-Bertram_Bobb_Documentry.jpg">
                  <br><span class="">First Day-Bertram Bobb Documentry</span>
             </li>
             <li>
-                <img class="" width="247.5px" height="180px" alt="Kid Fight-Bertram Bobb Documentry"  src="images/Kid_Fight-Bertram_Bobb_Documentry.jpg">
+                <img class="thumbnail" width="247.5px" height="180px" alt="Kid Fight-Bertram Bobb Documentry"  src="images/Kid_Fight-Bertram_Bobb_Documentry.jpg">
                  <br><span class="">Kid Fight-Bertram Bobb Documentry</span>
             </li>
             <li>
-                <img class="" width="247.5px" height="180px" alt="Enlisting-Bertram Bobb Documentry"  src="images/Enlisting-Bertram_Bobb_Documentry.jpg">
-                <br><span class="">Enlisting-Bertram Bobb Documentry</span>
+                <img class="thumbnail" width="247.5px" height="180px" alt="Enlisting-Bertram Bobb Documentry"  src="images/Enlisting-Bertram_Bobb_Documentry.jpg">
+                <br><span class="caption">Enlisting-Bertram Bobb Documentry</span>
             </li>
             <li>
-                <img class="" width="247.5px" height="180px" alt="Navy Boxing-Bertram Bobb Documentry"  src="images/Navy_Boxing-Bertram_Bobb_Documentry.jpg">
-                <br><span class="">Navy Boxing-Bertram Bobb Documentry</span>
+                <img class="thumbnail" width="247.5px" height="180px" alt="Navy Boxing-Bertram Bobb Documentry"  src="images/Navy_Boxing-Bertram_Bobb_Documentry.jpg">
+                <br><span class="caption">Navy Boxing-Bertram Bobb Documentry</span>
             </li>
             <li>
-                <img class="" width="130.5px" height="180px" alt="Golden Glove-Bertram Bobb Documentry"  src="images/Golden_Glove-Bertram_Bobb_Documentry.jpg">
-                <br><span class="">Golden Glove-Bertram Bobb Documentry</span>
+                <img class="thumbnail" width="130.5px" height="180px" alt="Golden Glove-Bertram Bobb Documentry"  src="images/Golden_Glove-Bertram_Bobb_Documentry.jpg">
+                <br><span class="caption">Golden Glove-Bertram Bobb Documentry</span>
             </li>
             <li>
-                <img class="" width="130.5px" height="180px" alt="Bertram Bobb Meets Mclemore-Bertram Bobb Documentry"  src="images/Bobb_Meets_Mclemore-Bertram_Bobb_Documentry.jpg">
-                 <br><span class="">Bertram Bobb Meets Mclemore-Bertram Bobb Documentry</span>
+                <img class="thumbnail" width="130.5px" height="180px" alt="Bertram Bobb Meets Mclemore-Bertram Bobb Documentry"  src="images/Bobb_Meets_Mclemore-Bertram_Bobb_Documentry.jpg">
+                 <br><span class="caption">Bertram Bobb Meets Mclemore-Bertram Bobb Documentry</span>
             </li>
             <li>
-                <img class="" width="247.5px" height="180px" alt="Bertram Bobb and McLemore-Bertram Bobb Documentry"  src="images/Bobb_and_McLemore-Bertram_Bobb_Documentry.jpg">
-               <br><span class="">Bertram Bobb and McLemore-Bertram Bobb Documentry</span>
+                <img class="thumbnail" width="247.5px" height="180px" alt="Bertram Bobb and McLemore-Bertram Bobb Documentry"  src="images/Bobb_and_McLemore-Bertram_Bobb_Documentry.jpg">
+               <br><span class="caption">Bertram Bobb and McLemore-Bertram Bobb Documentry</span>
             </li>
             <li>
-                <img class="" width="130.5px" height="180px" alt="Meeting Politicians-Bertram Bobb Documentry"  src="images/Meeting_Politicians-Bertram_Bobb_Documentry.jpg">
-                <br><span class="">Meeting Politicians-Bertram Bobb Documentry</span>
+                <img class="thumbnail" width="130.5px" height="180px" alt="Meeting Politicians-Bertram Bobb Documentry"  src="images/Meeting_Politicians-Bertram_Bobb_Documentry.jpg">
+                <br><span class="caption">Meeting Politicians-Bertram Bobb Documentry</span>
             </li>
             <li>
-                <img class="" width="255px" height="180px" alt="Bertram Bobb Leading Prayer-Bertram Bobb Documentry"  src="images/Bobb_Leading_Prayer-Bertram_Bobb_Documentry.jpg">
-                <br><span class="">Bertram Bobb Leading Prayer-Bertram Bobb Documentry</span>
+                <img class="thumbnail" width="255px" height="180px" alt="Bertram Bobb Leading Prayer-Bertram Bobb Documentry"  src="images/Bobb_Leading_Prayer-Bertram_Bobb_Documentry.jpg">
+                <br><span class="caption">Bertram Bobb Leading Prayer-Bertram Bobb Documentry</span>
             </li>
             <li>
-                <img class="" width="154.5px" height="180px" alt="Bertram Bobb Portrait-Bertram Bobb Documentry"  src="images/Bobb_Portrait-Bertram_Bobb_Documentry.jpg">
-               <br><span class="">Bertram Bobb Portrait-Bertram Bobb Documentry</span>
+                <img class="thumbnail" width="154.5px" height="180px" alt="Bertram Bobb Portrait-Bertram Bobb Documentry"  src="images/Bobb_Portrait-Bertram_Bobb_Documentry.jpg">
+               <br><span class="caption">Bertram Bobb Portrait-Bertram Bobb Documentry</span>
             </li>
             <li>
-                <img class="" width="142.5px" height="180px" alt="Surprise Birthday"  src="images/Surprise_Birthday.jpg">
-                <br><span class="">Surprise Birthday</span>
+                <img class="thumbnail" width="142.5px" height="180px" alt="Surprise Birthday"  src="images/Surprise_Birthday.jpg">
+                <br><span class="caption">Surprise Birthday</span>
             </li>
             <li>
-                <img class="" width="232.5px" height="180px" alt="Untitled-Sufi"  src="images/Untitled-Sufi.jpg">
-                <br><span class="">Untitled-Sufi</span>
+                <img class="thumbnail" width="232.5px" height="180px" alt="Untitled-Sufi"  src="images/Untitled-Sufi.jpg">
+                <br><span class="caption">Untitled-Sufi</span>
             </li>
             <li>
-                <img class="" width="181.5px" height="180px" alt="Darlington Bedroom"  src="images/Darlington_Bedroom.jpg">
-                <br><span class="">Darlington Bedroom</span>
+                <img class="thumbnail" width="181.5px" height="180px" alt="Darlington Bedroom"  src="images/Darlington_Bedroom.jpg">
+                <br><span class="caption">Darlington Bedroom</span>
             </li>
           </ul>
         <a href="present.html">(top)</a>
