--- a/Portfoliosite/present.html
+++ b/Portfoliosite/present.html
@@ -57,7 +57,7 @@
           <ul class="row first">
             <li class="">
                 <img class="thumbnail" width="136.5px" height="180px" alt="Self Portrait with Striped Sweater"  src="images/selfport_striped_shirt.jpg">
-                <br><span class="caption">Self Portrait with Striped Sweater</span>
+                <div class="caption">Self Portrait with Striped Sweater</div>
             </li>
             <li class="">
                 <img class="thumbnail" width="112.5px" height="180px" alt="Self Portrait with Coffee Cup"  src="images/Self_Portrait_With_Coffee_Cup.jpg">
@@ -177,7 +177,7 @@
             </li>
             <li>
                 <img class="thumbnail" width="181.5px" height="180px" alt="Darlington Bedroom"  src="images/Darlington_Bedroom.jpg">
-                <br><span class="caption">Darlington Bedroom</span>
+                <div class="caption">Darlington Bedroom</div>
             </li>
           </ul>
         <a href="present.html">(top)</a>
