--- a/Portfoliosite/present.html
+++ b/Portfoliosite/present.html
@@ -54,6 +54,7 @@
     </header>
     <div id="art_storage"><!--#art_storage-->
       <div class="container">
+        <h2 class="page-header text-center">Current Artwork</h2>
           <ul class="row first">
             <li class="">
                 <img class="thumbnail" width="136.5px" height="180px" alt="Self Portrait with Striped Sweater"  src="images/selfport_striped_shirt.jpg">
