--- a/Portfoliosite/present.html
+++ b/Portfoliosite/present.html
@@ -181,7 +181,7 @@
                 <div class="caption">Darlington Bedroom</div>
             </li>
           </ul>
-        <a href="present.html">(top)</a>
+        <a class="text-center" href="present.html">(top)</a>
       </div>
     </div><!--#art_storage-->
     <footer id="myfoot">
