--- a/Portfoliosite/present.html
+++ b/Portfoliosite/present.html
@@ -125,7 +125,7 @@
                  <div class="caption">Rev Folsom-Choctaw Hymns</div>
             </li>
             <li>
-                <img class=thumbnail"" width="144px" height="180px" alt="Alfred Wright-Choctaw Hymns"  src="images/Al_Wright-Choctaw_Hymns.jpg">
+                <img class="thumbnail" width="144px" height="180px" alt="Alfred Wright-Choctaw Hymns"  src="images/Al_Wright-Choctaw_Hymns.jpg">
                 <div class="caption">Alfred Wright-Choctaw Hymns</div>
             </li>
             <li>
