--- a/Portfoliosite/present.html
+++ b/Portfoliosite/present.html
@@ -58,127 +58,127 @@
           <ul class="row first">
             <li class="">
                 <img class="thumbnail" width="136.5px" height="180px" alt="Self Portrait with Striped Sweater"  src="images/selfport_striped_shirt.jpg">
-                <div class="caption">Self Portrait with Striped Sweater</div>
+                <div class="caption">Self Portrait with Striped Sweater<p>medium<br>10 x 10 cm</p></div>
             </li>
             <li class="">
                 <img class="thumbnail" width="112.5px" height="180px" alt="Self Portrait with Coffee Cup"  src="images/Self_Portrait_With_Coffee_Cup.jpg">
-                <div class="caption">Self Portrait with Coffee Cup</div>
+                <div class="caption">Self Portrait with Coffee Cup<p>medium<br>10 x 10 cm</p></div>
             </li>
             <li>
                 <img class="thumbnail" width="106.5px" height="180px" alt="Self Portrait with Yellow Shirt"  src="images/Self_Portrait_Yellow_Shirt.jpg">
-                 <div class="caption">Self Portrait with Yellow Shirt</div>
+                 <div class="caption">Self Portrait with Yellow Shirt<p>medium<br>10 x 10 cm</p></div>
             </li>
             <li>
                 <img class="thumbnail" width="141px" height="180px" alt="Self Portrait with Green Shirt"  src="images/Self_Portrait_Green_Shirt.jpg">
-                <div class="caption">Self Portrait with Green Shirt</div>
+                <div class="caption">Self Portrait with Green Shirt<p>medium<br>10 x 10 cm</p></div>
             </li>
             <li>
                 <img class="thumbnail" width="240px" height="180px" alt="Encaustic Self Portrait #1"  src="images/encaustic_portrait.jpg">
-                <div class="caption">Encaustic Self Portrait #1</div>
+                <div class="caption">Encaustic Self Portrait #1<p>medium<br>10 x 10 cm</p></div>
             </li>
             <li>
                 <img class="thumbnail" width="235.5px" height="180px" alt="Line For Icecream"  src="images/Line_For_Icecream.jpg">
-                 <div class="caption">Line For Icecream</div>
+                 <div class="caption">Line For Icecream<p>medium<br>10 x 10 cm</p></div>
             </li>
             <li>
                 <img class="thumbnail" width="231px" height="180px" alt="Line For Food #1"  src="images/Line_For_Food-1.jpg">
-                 <div class="caption">Line For Food #1</div>
+                 <div class="caption">Line For Food #1<p>medium<br>10 x 10 cm</p></div>
             </li>
             <li>
                 <img class="thumbnail" width="211.5px" height="180px" alt="Valentine"  src="images/Valentine.jpg">
-                 <div class="caption">Valentine</div>
+                 <div class="caption">Valentine<p>medium<br>10 x 10 cm</p></div>
             </li>
             <li>
                 <img class="thumbnail" width="144px" height="180px" alt="Hannah Commision 1"  src="images/hannah_commision_1.jpg">
-                 <div class="caption">Hannah Commision 1</div>
+                 <div class="caption">Hannah Commision 1<p>medium<br>10 x 10 cm</p></div>
             </li>
             <li>
                 <img class="thumbnail" width="141px" height="180px" alt="Hannah Commision 2"  src="images/hannah_commision_2.jpg">
-                 <div class="caption">Hannah Commision 2</div>
+                 <div class="caption">Hannah Commision 2<p>medium<br>10 x 10 cm</p></div>
             </li>
             <li>
                 <img class="thumbnail" width="136.5px" height="180px" alt="Hannah Commision 3"  src="images/hannah_commision_3.jpg">
-                 <div class="caption">Hannah Commision 3</div>
+                 <div class="caption">Hannah Commision 3<p>medium<br>10 x 10 cm</p></div>
             </li>
             <li>
                 <img class="thumbnail" width="174px" height="180px" alt="Octearaffe-inside"  src="images/octearaffe-inside.jpg">
-                <div class="caption">Octearaffe-inside</div>
+                <div class="caption">Octearaffe-inside<p>medium<br>10 x 10 cm</p></div>
             </li>
             <li>
                 <img class="thumbnail" width="181.5px" height="180px" alt="Wolearab-inside"  src="images/Wolearab-inside.jpg">
-                 <div class="caption">Wolearab-inside</div>
+                 <div class="caption">Wolearab-inside<p>medium<br>10 x 10 cm</p></div>
             </li>
             <li>
                 <img class="thumbnail" width="153px" height="180px" alt="David Folsom-Choctaw Hymns"  src="images/David_Folsom-Choctaw_Hymns.jpg">
-                 <div class="caption">David Folsom-Choctaw Hymns</div>
+                 <div class="caption">David Folsom-Choctaw Hymns<p>medium<br>10 x 10 cm</p></div>
             </li>
             <li>
                 <img class="thumbnail" width="156px" height="180px" alt="Peter Pitchlynn-Choctaw Hymns"  src="images/Peter_Pitchlynn-Choctaw_Hymns.jpg">
-                 <div class="caption">Peter Pitchlynn-Choctaw Hymns</div>
+                 <div class="caption">Peter Pitchlynn-Choctaw Hymns<p>medium<br>10 x 10 cm</p></div>
             </li>
             <li>
                 <img class="thumbnail" width="156px" height="180px" alt="Cyrus Byington-Choctaw Hymns"  src="images/Cyrus_Byington-Choctaw_Hymns.jpg">
-                 <div class="caption">Cyrus Byington-Choctaw Hymns</div>
+                 <div class="caption">Cyrus Byington-Choctaw Hymns<p>medium<br>10 x 10 cm</p></div>
             </li>
             <li>
                 <img class="thumbnail" width="141px" height="180px" alt="Rev Folsom-Choctaw Hymns"  src="images/Rev_Folsom-Choctaw_Hymns.jpg">
-                 <div class="caption">Rev Folsom-Choctaw Hymns</div>
+                 <div class="caption">Rev Folsom-Choctaw Hymns<p>medium<br>10 x 10 cm</p></div>
             </li>
             <li>
                 <img class="thumbnail" width="144px" height="180px" alt="Alfred Wright-Choctaw Hymns"  src="images/Al_Wright-Choctaw_Hymns.jpg">
-                <div class="caption">Alfred Wright-Choctaw Hymns</div>
+                <div class="caption">Alfred Wright-Choctaw Hymns<p>medium<br>10 x 10 cm</p></div>
             </li>
             <li>
                 <img class="thumbnail" width="136.5px" height="180px" alt="First Day-Bertram Bobb Documentry"  src="images/First_Day-Bertram_Bobb_Documentry.jpg">
-                 <div class="">First Day-Bertram Bobb Documentry</div>
+                 <div class="">First Day-Bertram Bobb Documentry<p>medium<br>10 x 10 cm</p></div>
             </li>
             <li>
                 <img class="thumbnail" width="247.5px" height="180px" alt="Kid Fight-Bertram Bobb Documentry"  src="images/Kid_Fight-Bertram_Bobb_Documentry.jpg">
-                 <div class="">Kid Fight-Bertram Bobb Documentry</div>
+                 <div class="">Kid Fight-Bertram Bobb Documentry<p>medium<br>10 x 10 cm</p></div>
             </li>
             <li>
                 <img class="thumbnail" width="247.5px" height="180px" alt="Enlisting-Bertram Bobb Documentry"  src="images/Enlisting-Bertram_Bobb_Documentry.jpg">
-                <div class="caption">Enlisting-Bertram Bobb Documentry</div>
+                <div class="caption">Enlisting-Bertram Bobb Documentry<p>medium<br>10 x 10 cm</p></div>
             </li>
             <li>
                 <img class="thumbnail" width="247.5px" height="180px" alt="Navy Boxing-Bertram Bobb Documentry"  src="images/Navy_Boxing-Bertram_Bobb_Documentry.jpg">
-                <div class="caption">Navy Boxing-Bertram Bobb Documentry</div>
+                <div class="caption">Navy Boxing-Bertram Bobb Documentry<p>medium<br>10 x 10 cm</p></div>
             </li>
             <li>
                 <img class="thumbnail" width="130.5px" height="180px" alt="Golden Glove-Bertram Bobb Documentry"  src="images/Golden_Glove-Bertram_Bobb_Documentry.jpg">
-                <div class="caption">Golden Glove-Bertram Bobb Documentry</div>
+                <div class="caption">Golden Glove-Bertram Bobb Documentry<p>medium<br>10 x 10 cm</p></div>
             </li>
             <li>
                 <img class="thumbnail" width="130.5px" height="180px" alt="Bertram Bobb Meets Mclemore-Bertram Bobb Documentry"  src="images/Bobb_Meets_Mclemore-Bertram_Bobb_Documentry.jpg">
-                 <div class="caption">Bertram Bobb Meets Mclemore-Bertram Bobb Documentry</div>
+                 <div class="caption">Bertram Bobb Meets Mclemore-Bertram Bobb Documentry<p>medium<br>10 x 10 cm</p></div>
             </li>
             <li>
                 <img class="thumbnail" width="247.5px" height="180px" alt="Bertram Bobb and McLemore-Bertram Bobb Documentry"  src="images/Bobb_and_McLemore-Bertram_Bobb_Documentry.jpg">
-               <div class="caption">Bertram Bobb and McLemore-Bertram Bobb Documentry</div>
+               <div class="caption">Bertram Bobb and McLemore-Bertram Bobb Documentry<p>medium<br>10 x 10 cm</p></div>
             </li>
             <li>
                 <img class="thumbnail" width="130.5px" height="180px" alt="Meeting Politicians-Bertram Bobb Documentry"  src="images/Meeting_Politicians-Bertram_Bobb_Documentry.jpg">
-                <div class="caption">Meeting Politicians-Bertram Bobb Documentry</div>
+                <div class="caption">Meeting Politicians-Bertram Bobb Documentry<p>medium<br>10 x 10 cm</p></div>
             </li>
             <li>
                 <img class="thumbnail" width="255px" height="180px" alt="Bertram Bobb Leading Prayer-Bertram Bobb Documentry"  src="images/Bobb_Leading_Prayer-Bertram_Bobb_Documentry.jpg">
-                <div class="caption">Bertram Bobb Leading Prayer-Bertram Bobb Documentry</div>
+                <div class="caption">Bertram Bobb Leading Prayer-Bertram Bobb Documentry<p>medium<br>10 x 10 cm</p></div>
             </li>
             <li>
                 <img class="thumbnail" width="154.5px" height="180px" alt="Bertram Bobb Portrait-Bertram Bobb Documentry"  src="images/Bobb_Portrait-Bertram_Bobb_Documentry.jpg">
-               <div class="caption">Bertram Bobb Portrait-Bertram Bobb Documentry</div>
+               <div class="caption">Bertram Bobb Portrait-Bertram Bobb Documentry<p>medium<br>10 x 10 cm</p></div>
             </li>
             <li>
                 <img class="thumbnail" width="142.5px" height="180px" alt="Surprise Birthday"  src="images/Surprise_Birthday.jpg">
-                <div class="caption">Surprise Birthday</div>
+                <div class="caption">Surprise Birthday<p>medium<br>10 x 10 cm</p></div>
             </li>
             <li>
                 <img class="thumbnail" width="232.5px" height="180px" alt="Untitled-Sufi"  src="images/Untitled-Sufi.jpg">
-                <div class="caption">Untitled-Sufi</div>
+                <div class="caption">Untitled-Sufi<p>medium<br>10 x 10 cm</p></div>
             </li>
             <li>
                 <img class="thumbnail" width="181.5px" height="180px" alt="Darlington Bedroom"  src="images/Darlington_Bedroom.jpg">
-                <div class="caption">Darlington Bedroom</div>
+                <div class="caption">Darlington Bedroom<p>medium<br>10 x 10 cm</p></div>
             </li>
           </ul>
         <div class="text-center"><a href="present.html">(top)</a></div>
