--- a/Portfoliosite/present.html
+++ b/Portfoliosite/present.html
@@ -130,11 +130,11 @@
             </li>
             <li>
                 <img class="thumbnail" width="136.5px" height="180px" alt="First Day-Bertram Bobb Documentry"  src="images/First_Day-Bertram_Bobb_Documentry.jpg">
-                 <div class="">First Day-Bertram Bobb Documentry<p>medium<br>10 x 10 cm</p></div>
+                 <div class="caption">First Day-Bertram Bobb Documentry<p>medium<br>10 x 10 cm</p></div>
             </li>
             <li>
                 <img class="thumbnail" width="247.5px" height="180px" alt="Kid Fight-Bertram Bobb Documentry"  src="images/Kid_Fight-Bertram_Bobb_Documentry.jpg">
-                 <div class="">Kid Fight-Bertram Bobb Documentry<p>medium<br>10 x 10 cm</p></div>
+                 <div class="caption">Kid Fight-Bertram Bobb Documentry<p>medium<br>10 x 10 cm</p></div>
             </li>
             <li>
                 <img class="thumbnail" width="247.5px" height="180px" alt="Enlisting-Bertram Bobb Documentry"  src="images/Enlisting-Bertram_Bobb_Documentry.jpg">
